After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 642306 - Epiphany crashes trying to open the inspector
Epiphany crashes trying to open the inspector
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal critical
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-02-14 17:43 UTC by Sergio Villar
Modified: 2011-02-16 12:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (1.00 KB, patch)
2011-02-14 17:47 UTC, Sergio Villar
none Details | Review

Description Sergio Villar 2011-02-14 17:43:50 UTC
Like this:

Program received signal SIGSEGV, Segmentation fault.
0x080ba943 in _ephy_embed_set_statusbar_label (embed=0x0, label=0x0) at ephy-embed.c:851
851	  EphyEmbedPrivate *priv = embed->priv;
(gdb) bt
  • #0 _ephy_embed_set_statusbar_label
    at ephy-embed.c line 851
  • #1 ephy_web_view_statusbar_update
    at ephy-web-view.c line 3691
  • #2 ephy_web_view_statusbar_pop
    at ephy-web-view.c line 3797
  • #3 status_message_notify_cb
    at ephy-web-view.c line 561

Caused by lastest changes in the statusbar
Comment 1 Sergio Villar 2011-02-14 17:47:05 UTC
Created attachment 180843 [details] [review]
Patch

Inspector's WebView does not have a EphyEmbed ancestor
Comment 2 Sergio Villar 2011-02-14 17:55:22 UTC
Adding Xan to Cc: as he recently changed that code
Comment 3 Sergio Villar 2011-02-16 12:25:49 UTC
Committed c886bd11a10380625860f9457fbc7964c9f30079