ephy-web-view: do not update statusbar text for webviews without embed object

Fixes a crash when trying to open the WebInspector

https://bugzilla.gnome.org/show_bug.cgi?id=642306